--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+onstudioab@gmail.com<!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <li><strong>Datahantering:</strong> Eventuella speldata (t.ex. poäng eller inställningar) sparas endast lokalt på din enhet.</li>
   </ul>
 
-  <p>Om du har frågor, kontakta oss: <a href="mailto:dinadress@example.com">dinadress@example.com</a></p>
+  <p>Om du har frågor, kontakta oss: <a href="mailto:omerionstudiosab@gmail.com">dinadress@example.com</a></p>
 
   <hr>
 
@@ -29,7 +29,7 @@
     <li><strong>Data Handling:</strong> Any game data (e.g., scores or settings) is stored only locally on your device.</li>
   </ul>
 
-  <p>If you have questions, contact us: <a href="mailto:youraddress@example.com">youraddress@example.com</a></p>
+  <p>If you have questions, contact us: <a href="mailto:omerionstudiosab@gmail.com">youraddress@example.com</a></p>
 </body>
 </html>
 
